--- a/package.json
+++ b/package.json
@@ -1,69 +1,8 @@
 {
-  "author": "Thomas Parisot (https://oncletom.io)",
-  "name": "tldjs",
+  "name": "oncletom-tld.js",
   "description": "JavaScript API to work against complex domain names, subdomains and URIs.",
   "version": "1.3.1",
-  "homepage": "https://github.com/oncletom/tld.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/oncletom/tld.js.git"
-  },
-  "bugs": {
-    "url": "https://github.com/oncletom/tld.js/issues"
-  },
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "test": "npm run lint && npm run test-node && npm run test-browser",
-    "lint": "jshint --config .jshintrc lib/**/*.js",
-    "test-node": "mocha --reporter dot",
-    "test-watch": "mocha --reporter dot --watch",
-    "test-browser": "testling",
-    "build": "npm run build-rules && npm run build-browser && npm run build-compress",
-    "build-rules": "node ./bin/update.js",
-    "build-browser": "browserify -r ./index.js -s tld > dist/tld.js",
-    "build-compress": "uglifyjs -b beautify=false,quote-keys=true dist/tld.js > dist/tld.min.js",
-    "prepublish": "npm run build"
-  },
-  "engines": {
-    "node": "0.8.x || 0.10.x"
-  },
-  "testling": {
-    "files": "test/*.js",
-    "harness": "mocha-bdd",
-    "browsers": [
-      "ie/7..10",
-      "ff/latest..nightly",
-      "chrome/latest..canary",
-      "opera/latest..next",
-      "safari/6.0",
-      "iphone/6.0",
-      "android/4.2"
-    ]
-  },
+  "main": "lib/tld.min.js",
   "dependencies": {},
-  "devDependencies": {
-    "request": "~2.12.0",
-    "mocha": "~1.13.0",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-contrib-jshint": "~0.4.3",
-    "testling": "~1.5.1",
-    "browserify": "~2.34.0",
-    "jshint": "~2.1.11",
-    "chai": "~1.8.1",
-    "uglify-js": "~2.4.3",
-    "async": "~0.2.9",
-    "lodash": "~2.4.1"
-  },
-  "keywords": [
-    "tld",
-    "sld",
-    "domain",
-    "browser",
-    "uri",
-    "url",
-    "domain name",
-    "subdomain",
-    "public suffix"
-  ]
+  "license": "MIT"
 }
